--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ qk_data = { path = "qk_data" }
 qk_term = { path = "qk_term" }
 # anyhow = "1.0"
 # thiserror = "1.0"
-glib = ""
+#glib = ""
 #glib-sys = "0.10.1"
 
 chrono = "0.4"
@@ -20,13 +20,11 @@ futures-channel = "0.3"
 futures-util = "0.3"
 once_cell = "1.2.0"
 
-[dependencies.gtk]
-version = "0.9.2"
-features = ["v3_20"]
+gtk = { version = "0.2.0", features = ["v3_22"] }
 
-[dependencies.gio]
-version = ""
-features = ["v2_44"]
+#[dependencies.gio]
+#version = ""
+#features = ["v2_44"]
 
 [dependencies.pangocairo]
 optional = true
