--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 qk_data = { path = "qk_data" }
 qk_term = { path = "qk_term" }
+qk_livesystem = { path = "qk_livesystem" }
 # anyhow = "1.0"
 # thiserror = "1.0"
 #glib = ""
