--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,31 +10,24 @@ edition = "2018"
 qk_data = { path = "qk_data" }
 qk_term = { path = "qk_term" }
 qk_livesystem = { path = "qk_livesystem" }
-# anyhow = "1.0"
-# thiserror = "1.0"
-#glib = ""
-#glib-sys = "0.10.1"
 
 chrono = "0.4"
 futures = "0.3"
 futures-channel = "0.3"
 futures-util = "0.3"
 once_cell = "1.2.0"
-
-gtk = { version = "0.2.0", features = ["v3_22"] }
-
-#[dependencies.gio]
-#version = ""
-#features = ["v2_44"]
+gtk = { version = "", features = ["v3_22"] }
+cairo-rs = { version = "", features = ["png"] }
+gio = ""
 
 [dependencies.pangocairo]
 optional = true
 
-[dependencies.cairo]
-package = "cairo-rs"
-features = ["png"]
-optional = true
+#[dependencies.cairo]
+#package = "cairo-rs"
+#features = ["png"]
+#optional = true
 
-[dependencies.async-tls]
-version = "0.11"
-optional = true
+#[dependencies.async-tls]
+#version = "0.11"
+#optional = true
