--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ futures = "0.3"
 futures-channel = "0.3"
 futures-util = "0.3"
 once_cell = "1.2.0"
-gtk = { version = "", features = ["v3_22"] }
-cairo-rs = { version = "", features = ["png"] }
-gio = ""
+gtk = { version = "0.9.2", features = ["v3_22"] }
+cairo-rs = { version = "0.9.1", features = ["png"] }
+gio = "0.9.1"
 
 [dependencies.pangocairo]
 optional = true
