--- a/qk_livesystem/Cargo.toml
+++ b/qk_livesystem/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 qk_term = { path = "../qk_term" }
 qk_data = { path = "../qk_data" }
 chrono = "0.4.19"
+cairo-rs = { version = "0.9.1", features = ["png"] }
