--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ futures-channel = "0.3"
 futures-util = "0.3"
 once_cell = "1.2.0"
 gtk = { version = "0.9.2", features = ["v3_22"] }
+gdk = "0.13.2"
 cairo-rs = { version = "0.9.1", features = ["png"] }
 gio = "0.9.1"
 
