Remove Gtk, add Imgui

--- a/qk_livesystem/Cargo.toml
+++ b/qk_livesystem/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 qk_term = { path = "../qk_term" }
 qk_data = { path = "../qk_data" }
 chrono = "0.4.19"
-cairo-rs = { version = "0.9.1", features = ["png"] }
+imgui = "0.7.0"
+#cairo-rs = { version = "0.9.1", features = ["png"] }
