--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,19 @@ futures = "0.3"
 futures-channel = "0.3"
 futures-util = "0.3"
 once_cell = "1.2.0"
-gtk = { version = "0.9.2", features = ["v3_22"] }
-gdk = "0.13.2"
-cairo-rs = { version = "0.9.1", features = ["png"] }
-gio = "0.9.1"
 
-[dependencies.pangocairo]
-optional = true
+glium = { version = "0.29", default-features = true }
+image = "0.23"
+imgui = "0.7.0"
+imgui-glium-renderer = "0.7.0"
+imgui-winit-support = "0.7.0"
+
+#gtk = { version = "0.9.2", features = ["v3_22"] }
+#gdk = "0.13.2"
+#cairo-rs = { version = "0.9.1", features = ["png"] }
+#gio = "0.9.1"
+#[dependencies.pangocairo]
+#optional = true
 
 #[dependencies.cairo]
 #package = "cairo-rs"
